# bazel_web_test_bugs

./: .bazelrc  .gitignore  README.md  WORKSPACE  package.json  tsconfig.json
tests/broken-pipe/: BUILD.bazel  source_file.ts  spec_file.spec.ts
tests/npm-deps/: BUILD.bazel  source_file.ts  spec_file.spec.ts
